--- a/style.css
+++ b/style.css
@@ -7,8 +7,10 @@
 
 .section1 {
     background-color: aquamarine;
+    padding: 100px;
 }
 
 .section2 {
     background-color: blueviolet;
+    padding: 100px;
 }
